fix: Deviseの設定を変更してパスワードの最小文字数を4文字に設定

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -20,3 +20,4 @@ ja:
       not_saved:
         one: "1件のエラーがあります"
         other: "%{count}件のエラーがあります"
+        too_short: "は%{count}文字以上で入力してください"
