fix: ja.ymlの翻訳文から「。」を削除

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,10 +2,10 @@ ja:
   errors:
     format: "%{attribute}%{message}"
     messages:
-      blank: "を入力してください。"
-      taken: "は既に使用されています。"
-      invalid: "は有効な値ではありません。"
-      too_short: "は%{count}文字以上で入力してください。"
+      blank: "を入力してください"
+      taken: "は既に使用されています"
+      invalid: "は有効な値ではありません"
+      too_short: "は%{count}文字以上で入力してください"
       # 他のデフォルトメッセージも必要に応じて追加
 
   activerecord:
