--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -4,8 +4,8 @@ ja:
   errors:
     format: "%{attribute}%{message}"
     messages:
-      not_saved: "ユーザーの保存に失敗しました。以下のエラーをご確認ください。"
-      record_invalid: "無効なレコードです。"
+      not_saved: "ユーザーの保存に失敗しました"
+      record_invalid: "無効なレコードです"
 
   activerecord:
     errors:
@@ -13,9 +13,9 @@ ja:
         user:
           attributes:
             email:
-              taken: "このメールアドレスは既に使用されています。"
+              taken: "このメールアドレスは既に使用されています"
             username:
-              taken: "このユーザー名は既に使用されています。"
+              taken: "このユーザー名は既に使用されています"
 
   devise:
     sessions:
@@ -32,16 +32,13 @@ ja:
       unauthenticated: "ログインしてください"
       invalid: "ログインが必要です"
       not_saved: "アカウントが作成できませんでした"
-      not_found_in_database: "無効な%{authentication_keys}またはパスワードです。"
+      not_found_in_database: "無効な%{authentication_keys}またはパスワードです"
     errors:
       messages:
         not_saved:
           one: "1件のエラーがあります"
           other: "%{count}件のエラーがあります"
-          too_short: "は%{count}文字以上で入力してください。"
+          too_short: "は%{count}文字以上で入力してください"
     omniauth_callbacks:
-      failure: "%{kind}からの認証に失敗しました。"
+      failure: "%{kind}からの認証に失敗しました"
       success: "%{kind}アカウントでログインしました"
-
-  # 他の翻訳も必要に応じて追加
-
