不要な翻訳ファイルを修正および整理

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
+# このファイルは現在使用されていません。デフォルトのロケールは日本語です。
 # Files in the config/locales directory are used for internationalization and
 # are automatically loaded by Rails. If you want to use locales other than
 # English, add the necessary files in this directory.
@@ -27,5 +28,5 @@
 #       "yes": yup
 #       enabled: "ON"
 
-en:
-  hello: "Hello world"
+# en:
+#   hello: "Hello world"
